--- a/RawrzMe.Library/RawrzMe.Library.csproj
+++ b/RawrzMe.Library/RawrzMe.Library.csproj
@@ -49,6 +49,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Daos\UserDao.cs" />
+    <Compile Include="Mapper\User.cs" />
+    <Compile Include="Models\Authentication.cs" />
+    <Compile Include="Models\Login.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RawrzMeEntities.Context.cs">
       <AutoGen>True</AutoGen>
@@ -66,9 +71,6 @@
       <DependentUpon>RawrzMeEntities.edmx</DependentUpon>
     </Compile>
     <Compile Include="User.cs">
-      <DependentUpon>RawrzMeEntities.tt</DependentUpon>
-    </Compile>
-    <Compile Include="UserInformation.cs">
       <DependentUpon>RawrzMeEntities.tt</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -100,5 +102,6 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
