--- a/RawrzMe.Library/RawrzMe.Library.csproj
+++ b/RawrzMe.Library/RawrzMe.Library.csproj
@@ -70,6 +70,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>RawrzMeEntities.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Services\Login.cs" />
     <Compile Include="User.cs">
       <DependentUpon>RawrzMeEntities.tt</DependentUpon>
     </Compile>
