Changed database connection strings and am working to get better db setup

--- a/RawrzService/Web.config
+++ b/RawrzService/Web.config
@@ -87,6 +87,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="RawrzMeEntities" connectionString="metadata=res://*/RawrzMeEntities.csdl|res://*/RawrzMeEntities.ssdl|res://*/RawrzMeEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALEXANDER;initial catalog=RawrzMe;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="RawrzMeEntities" connectionString="metadata=res://*/RawrzMeEntities.csdl|res://*/RawrzMeEntities.ssdl|res://*/RawrzMeEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=rawrzme.database.windows.net;initial catalog=RawrzMe;persist security info=True;user id=Cerealean;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
