--- a/RawrzMe.Library/App.Config
+++ b/RawrzMe.Library/App.Config
@@ -4,8 +4,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="RawrzMeEntities" connectionString="metadata=res://*/RawrzMeEntities.csdl|res://*/RawrzMeEntities.ssdl|res://*/RawrzMeEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALEXANDER;initial catalog=RawrzMe;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <connectionStrings configSource="Local.ConnectionStrings.config">
+    <add name="RawrzMeEntities" connectionString="metadata=res://*/RawrzMeEntities.csdl|res://*/RawrzMeEntities.ssdl|res://*/RawrzMeEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=rawrzme.database.windows.net;initial catalog=RawrzMe;persist security info=True;user id=Cerealean;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
