--- a/RawrzMe.Library/RawrzMe.Library.csproj
+++ b/RawrzMe.Library/RawrzMe.Library.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>RawrzMe.Library</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -36,6 +38,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Sodium, Version=0.10.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\libsodium-net.0.10.0\lib\Net40\Sodium.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -51,9 +56,11 @@
   <ItemGroup>
     <Compile Include="Daos\UserDao.cs" />
     <Compile Include="Mapper\User.cs" />
+    <Compile Include="Mapper\UserAuthentication.cs" />
     <Compile Include="Models\Authentication.cs" />
     <Compile Include="Models\Login.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserAuthentication.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RawrzMeEntities.Context.cs">
       <AutoGen>True</AutoGen>
@@ -70,8 +77,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>RawrzMeEntities.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Services\Authentication.cs" />
     <Compile Include="Services\Login.cs" />
-    <Compile Include="User.cs">
+    <Compile Include="user.cs">
+      <DependentUpon>RawrzMeEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="user_authentication.cs">
       <DependentUpon>RawrzMeEntities.tt</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -105,4 +116,11 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\Baseclass.Contrib.Nuget.Output.2.3.0\build\net40\Baseclass.Contrib.Nuget.Output.targets" Condition="Exists('..\packages\Baseclass.Contrib.Nuget.Output.2.3.0\build\net40\Baseclass.Contrib.Nuget.Output.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Baseclass.Contrib.Nuget.Output.2.3.0\build\net40\Baseclass.Contrib.Nuget.Output.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Baseclass.Contrib.Nuget.Output.2.3.0\build\net40\Baseclass.Contrib.Nuget.Output.targets'))" />
+  </Target>
 </Project>
