Changed connection strings

--- a/RawrzMe.Library/App.Config
+++ b/RawrzMe.Library/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings configSource="Local.ConnectionStrings.config">
-    <add name="RawrzMeEntities" connectionString="metadata=res://*/RawrzMeEntities.csdl|res://*/RawrzMeEntities.ssdl|res://*/RawrzMeEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=rawrzme.database.windows.net;initial catalog=RawrzMe;persist security info=True;user id=Cerealean;password=8%y&amp;wcAvYt%B9*6;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="RawrzMeEntities" connectionString="metadata=res://*/RawrzMeEntities.csdl|res://*/RawrzMeEntities.ssdl|res://*/RawrzMeEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=RawrzMe;persist security info=True;integrated security=true;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
