--- a/RawrzService/Web.config
+++ b/RawrzService/Web.config
@@ -87,6 +87,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="RawrzMeEntities" connectionString="metadata=res://*/RawrzMeEntities.csdl|res://*/RawrzMeEntities.ssdl|res://*/RawrzMeEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=rawrzme.database.windows.net;initial catalog=RawrzMe;persist security info=True;user id=Cerealean;password=8%y&amp;wcAvYt%B9*6;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="RawrzMeEntities" connectionString="metadata=res://*/RawrzMeEntities.csdl|res://*/RawrzMeEntities.ssdl|res://*/RawrzMeEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=RawrzMe;persist security info=True;integrated security=true;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
