--- a/RawrzMe.Library/App.Config
+++ b/RawrzMe.Library/App.Config
@@ -4,7 +4,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings configSource="Local.ConnectionStrings.config">
+  <connectionStrings>
     <add name="RawrzMeEntities" connectionString="metadata=res://*/RawrzMeEntities.csdl|res://*/RawrzMeEntities.ssdl|res://*/RawrzMeEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=RawrzMe;persist security info=True;integrated security=true;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
